@@ -1,6 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
-	- removed support for gcc 2.x (or older)
+	- Fixed menu and shortcut handling (STR #2243)
+	- Removed support for gcc 2.x (or older)
 	- Fixed fltk-config to give --libs on one line (STR #2408)
 	- Fixed tab key navigation to inactive widgets (STR #2420)
 	- Fixed outside label redraw damage areas (STR #2436)
